--- a/www.shubhamz.in/index.html
+++ b/www.shubhamz.in/index.html
@@ -4,6 +4,8 @@
 <!-- Mirrored from www.shubhamz.in/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 13 Jul 2024 20:05:04 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2888776196526940"
+     crossorigin="anonymous"></script>
 <script defer='defer' src='../cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js'></script>
 <script>
   window.OneSignalDeferred = window.OneSignalDeferred || [];
