--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Website Loading</title>
 
 	<style type="text/css">
-	<!--
+	
 
 body {
 	margin: 0;  padding: 0;  margin-bottom: 15px;  margin-top: 8px;
@@ -73,10 +73,13 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 .tblNoBorder td   { border: 0; }
 
 
-// -->
+
 </style>
 
 </head>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2888776196526940"
+     crossorigin="anonymous"></script>
 
 <table width="76%" border="0" align="center" cellspacing="0" cellpadding="3" class="tableWidth">
 	<tr>
