--- a/www.shubhamz.in/index.html
+++ b/www.shubhamz.in/index.html
@@ -4,6 +4,11 @@
 <!-- Mirrored from www.shubhamz.in/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 13 Jul 2024 20:05:04 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
+
+     <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
+
      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2888776196526940"
      crossorigin="anonymous"></script>
 <script defer='defer' src='../cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js'></script>
@@ -1037,6 +1042,10 @@ disqusShortname = "pikitemplates";
 
 </head>
 <body class='index home feed-view'>
+
+     <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-2888776196526940">
+</amp-auto-ads>
 <!-- Theme Options -->
 <div class='admin-area' style='display:none'>
 <div class='admin-section section' id='admin' name='Theme Options (Admin Panel)'>
